# silvertree-newsletter

./: .env.example  .gitignore  README.md  pyproject.toml  silvertree_tracking_scope.csv
config/: COMPANIES_AND_COMPETITORS.md  README.md  prompt_context.json  silvertree_companies_competitors.json  sources_catalog.json  sources_catalog.min.json
config/portfolio_context/: fenergo.md  ignite_group.md  mhance.md  orbus_software.md  salesmanago.md  tally_group.md  thesis.md  xtel.md
docs/: CARVEOUT_ENHANCEMENTS.md  CHECKPOINTING.md  DEEP_RESEARCH_IMPLEMENTATION.md  OVERALL_TASK_CONTEXT.md  PLAN.md  SYSTEM_ARCHITECTURE.md  TRACKING_SCOPE.md
scripts/: create_word_docs.py  generate_portfolio_context.py
src/silvertree_newsletter/: __init__.py  __main__.py  config.py  main.py  send_email.py  workflow.py
src/silvertree_newsletter/agents/: __init__.py  analysis_agent.py  carve_out_research_agent.py  dedupe_agent.py  deep_research_agent.py  email_composer.py  relevance_analyzer.py  triage_agent.py
src/silvertree_newsletter/models/: schemas.py
src/silvertree_newsletter/services/: content_fetcher.py  email_sender.py  pdf_generator.py  perplexity.py  rss_collector.py
src/silvertree_newsletter/tools/: __init__.py  company_context_generator.py  company_context_loader.py  csv_parser.py  date_filter.py  item_grouping.py  portfolio_context_files.py  prompt_context_loader.py  (+2 more)
tests/: __init__.py  test_analysis_agent.py  test_email_sender.py  test_full_pipeline.py  test_news_aggregation.py  test_perplexity_search.py  test_rss_and_relevance.py  test_triage_agent.py
(+4 files in other folders)
